# water-supply-forecast-rodeo-runtime

./: .dockerignore  .gitignore  CHANGELOG.md  MAINTAINERS.md  Makefile  README.md  allowed_hosts.txt  data.du.txt  data.find.txt  dev-requirements.txt
.github/workflows/: build.yml
cross_validation/: .gitignore  README.md  example.py  requirements.txt
data_download/: forecast_config-2023-01-01.yml  forecast_config-2024-01-01.yml  forecast_config-2024-01-08.yml  hindcast_test_config.yml  pyproject.toml  requirements.txt
data_download/tests/: test_cli.py
data_download/wsfr_download/: __main__.py  cdec.py  cli.py  config.py  cpc_outlooks.py  grace_indicators.py  mjo.py  modis_vegetation.py  nino_regions_sst.py  oni.py  pdo.py  pdsi.py  pna.py  snodas.py  snotel.py  soi.py  usgs_streamflow.py  utils.py
data_reading/: LICENSE  pyproject.toml
data_reading/tests/: test_climate.py  test_teleconnections.py  test_usgs_streamflow.py
data_reading/wsfr_read/: __init__.py  config.py  sites.py
data_reading/wsfr_read/climate/: __init__.py  cpc_outlooks.py
data_reading/wsfr_read/streamflow/: __init__.py  naturalized_flow.py  usgs_streamflow.py
data_reading/wsfr_read/teleconnections/: __init__.py  mjo.py  nino_regions_sst.py  oni.py  pdo.py  pna.py  soi.py
examples/moving_average/: README.md  solution.py  train_stats.json
examples/template/: solution.py
runtime/: Dockerfile  conda-lock-cpu.yml  conda-lock-gpu.yml  entrypoint.sh  environment-cpu.yml  environment-gpu.yml  supervisor.py
runtime/tests/: test_packages.py
scoring/: README.md  score.py
